--- a/layouts/partials/ui.html
+++ b/layouts/partials/ui.html
@@ -1,6 +1,6 @@
 <div class="ui">
 	<a href="#top">↑</a>
-	<button id="theme-toggle">◑</button>
+	<a id="theme-toggle">◑</a>
 </div>
 <script type="text/javascript">
 	var themetoggle = document.querySelector('#theme-toggle');
