--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -25,10 +25,12 @@
 					<div class="summary">
 						{{ .Params.description | markdownify }}
 					</div>
-					{{ if eq .Site.Params.Sharing true }}{{ partial "sharing.html" . }}{{ end }}
+					{{ if and (ne .Site.Params.show_share false) (ne .Params.show_share false) }}
+						{{ partial "sharing.html" . }}
+					{{ end }}
 				{{ end }}
 			</div>
-		{{ if ne .Params.Meta_display false -}}
+		{{ if and (ne .Site.Params.show_meta false) (ne .Params.show_meta false)  -}}
 			<aside class="meta">
 				<div class="wrapper">
 					<h2>{{ (i18n "post-details") }}</h2>
@@ -86,7 +88,7 @@
 					</dl>
 				</div>
 
-				{{- if eq .Type "readings" -}}
+				{{- if eq .Type "review" -}}
 				<div class="wrapper">
 					<h2>{{ (i18n "publication-details") }}</h2>
 					<dl>
@@ -145,11 +147,14 @@
 				{{ end }}
 
 			</aside>
+		{{ else }}—
 		{{- end }}
 		</header>
 		<div class="entry-content" itemprop="articleBody">
 			{{ .Content }}
 		</div>
 	</article>
-	{{ template "_internal/disqus.html" . }}
+	{{ if ne .Params.show_comments false }}
+		{{ template "_internal/disqus.html" . }}
+	{{ end }}
 {{ end }}
