--- a/layouts/partials/languages.html
+++ b/layouts/partials/languages.html
@@ -3,7 +3,7 @@
 	<ul>
 		{{- range .AllTranslations -}}
 		<!-- <li><a href="{{ .RelPermalink }}">{{ .Site.Language.Lang }}</a></li> -->
-		<li><a href="{{ .RelPermalink }}" lang="{{ .Site.Language.Lang }}" class="{{ if eq $.Page.RelPermalink .RelPermalink }}active{{ end }}">{{ .Site.Language.LanguageName }}</a></li>
+		<li><a href="{{ .RelPermalink }}" lang="{{ .Site.LanguageCode }}" class="{{ if eq $.Page.RelPermalink .RelPermalink }}active{{ end }}">{{ .Site.Language.LanguageName }}</a></li>
 		{{- end }}
 	</ul>
 </nav>
