--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -25,8 +25,8 @@
 			{{- else if .Params.dateRead -}}
 				{{- .Params.dateRead -}}
 			{{- else -}}
-				{{- if isset $.Site.Params "date_format" -}}
-					{{- .Date.Format $.Site.Params.date_format -}}
+				{{- if isset $.Site.Params "dateformat" -}}
+					{{- .Date.Format $.Site.Params.dateformat -}}
 				{{- else -}}
 					{{- .Date.Format "2006-01-02" -}}
 				{{- end -}}
