--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,9 @@
 	<!-- <link rel="stylesheet" href="{{ "/scripts/fancybox/jquery.fancybox.css" | relURL }}"> -->
 </head>
 <body id="top" class="{{ .Kind }}{{ with .Site.Params.Theme }} {{ . }}{{ end }}{{ with .Params.Theme }} {{ . }}{{ end }}"{{ with .Site.Params.LanguageDir }} dir="{{ . }}"{{ end }}>
+	{{- with .Resources.GetMatch "custom.css" }}
+		<style>{{ .Content | safeCSS }}</style>
+	{{ end -}}
 	{{ partial "languages" . }}
 	{{ if ne .Site.Params.show_ui false }}{{ partial "ui" . }}{{ end }}
 	<header>
