--- a/layouts/partials/footer/inner.html
+++ b/layouts/partials/footer/inner.html
@@ -1,19 +1,21 @@
-{{ if ne .Site.Params.show_social false }}
-	{{ if .Site.Params.Author }}
-	<div class="media author-card" itemscope="" itemtype="http://schema.org/Person">	  
-		{{ with .Site.Params.Author.Image }}<img class="avatar" src="{{ . | relURL }}" itemprop="image" alt="">{{ end }}
-		<div class="media-body">
-			{{ with .Site.Params.Author.Name }}<h3 class="card-title" itemprop="name">{{ . }}</h3>{{ end }}
-			{{ with .Site.Params.Author.Description }}<p class="card-text" itemprop="description">{{ . }}</p>{{ end }}
+<div class="inner">
+	{{ if ne .Site.Params.show_social false }}
+		{{ if .Site.Params.Author }}
+		<div class="media author-card" itemscope="" itemtype="http://schema.org/Person">	  
+			{{ with .Site.Params.Author.Image }}<img class="avatar" src="{{ . | relURL }}" itemprop="image" alt="">{{ end }}
+			<div class="media-body">
+				{{ with .Site.Params.Author.Name }}<h3 class="card-title" itemprop="name">{{ . }}</h3>{{ end }}
+				{{ with .Site.Params.Author.Description }}<p class="card-text" itemprop="description">{{ . }}</p>{{ end }}
+			</div>
 		</div>
-	</div>
+		{{ end }}
 	{{ end }}
-{{ end }}
 
-{{ if ne .Site.Params.show_social false }}{{ partial "social.html" . }}{{ end }}
+	{{ if ne .Site.Params.show_social false }}{{ partial "social.html" . }}{{ end }}
 
-{{ with .Site.Copyright -}}
-	<div class="copyright">{{ . | safeHTML  }}</div>
-{{- end }}
-<!-- <small>Last Modified: {{ now.Format "2006-01-02 15:04 MST" }}</small> -->
-{{ partial "footer/nav.html" . }}
+	{{ with .Site.Copyright -}}
+		<div class="copyright">{{ . | safeHTML  }}</div>
+	{{- end }}
+	<!-- <small>Last Modified: {{ now.Format "2006-01-02 15:04 MST" }}</small> -->
+	{{ partial "footer/nav.html" . }}
+</div>
