--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -4,7 +4,12 @@
 {{- else if eq .Type "ephemera" -}}
 	{{ .RawContent | safeHTML }}
 {{- else -}}
-	<a href="{{ .RelPermalink }}">
+	<a href="
+	{{ with .Resources.GetMatch (printf "**%s" .Params.directURL) }}
+		{{ .RelPermalink }}
+	{{ else }}
+		{{ .RelPermalink }}
+	{{ end }}">
 		{{ $featured := "" }}
 		{{ if .Params.image_preview }}
 			{{ $featured = (.Resources.ByType "image").GetMatch (printf "**%s" .Params.image_preview) }}
