--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -670,6 +670,10 @@ main blockquote + figcaption {
 	text-align: right;
 }
 
+.entry-content dd {
+	margin-left: var(--gutter-width);
+}
+
 /*--------------------------------------------------------------
 helper / common classes
 --------------------------------------------------------------*/
@@ -896,7 +900,7 @@ body > main {
 	position: relative;
 	margin-bottom: calc(6*var(--line-height));
 	/*margin-bottom: 100vh;*/
-	padding: 0 var(--gutter-width) 0.5rem;
+	padding: 0 var(--gutter-width);
 	min-height: 100vh;
 
 	background: inherit;
@@ -971,9 +975,9 @@ panel styles
 	.panel:first-child {
 		--page-color-transparency: 1;
 	}
-	.panel:last-child {
+/*	.panel:last-child {
 		margin-bottom: var(--gutter-height);
-	}
+	}*/
 
 /*.panel + *:not(.panel) {
 	margin-top: var(--gutter-height);
@@ -1369,8 +1373,8 @@ tags styles
 
 .tag {
 	display: inline-block;
-	padding: 0.5rem;
-	margin: 0 0.2rem 0.4rem ;
+	padding: 0.5em;
+	margin: 0 0.4rem 0.4rem 0;
 
 	background: rgb(var(--page-color));
 	border: 1.5px solid rgb(var(--text-color));
@@ -1633,6 +1637,11 @@ articles-list styles
 
 .articles-list article .tags {
 	/*display: none;*/
+}
+
+.articles-list article .tags .tag {
+	border: none;
+	font-size: 0.6em;
 }
 
 
