--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -10,6 +10,9 @@
 
 <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}">
 <link rel="stylesheet" href="{{ "/scripts/fancybox/jquery.fancybox.css" | relURL }}">
+{{ if (fileExists "static/styles/custom.css") -}}
+<link rel="stylesheet" href="{{ "/styles/custom.css" | relURL }}">
+{{- end }}
 
 {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
