--- a/layouts/shortcodes/section.html
+++ b/layouts/shortcodes/section.html
@@ -1,3 +1,3 @@
 {{- $class := (.Get "class") -}}
 {{- $style := (.Get "style") -}}
-<section {{ with $class }}class="{{ $class }}"{{ end }}{{ with $style }} style="{{ $style }}"{{ end }}>{{ .Inner }}</section>
+<section {{ with $class }}class="{{ $class | safeHTMLAttr }}"{{ end }}{{ with $style }} style="{{ $style | safeCSS }}"{{ end }}>{{ .Inner }}</section>
