--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -6,7 +6,9 @@
 {{ template "_internal/twitter_cards.html" . }}
 {{ template "_internal/schema.html" . }}
 
+{{ if (fileExists "favicon.png") -}}
 <link rel="icon" type="image/png" href="{{ "/favicon.png" | relURL }}">
+{{- end }}
 
 <link rel="stylesheet" href="{{ "/styles/screen.css" | relURL }}">
 <link rel="stylesheet" href="{{ "/scripts/fancybox/jquery.fancybox.css" | relURL }}">
